07 Jul 2008 - trunk
-------------------

* Persistent counter updates are now atomic.


05 Jun 2008 - 2.5.5
-------------------

* Fixed an issue where an alert was not logged in the error log
  unless "auditlog" was used.

* Enable the "auditlog" action by default to help prevent a misconfiguration.
  The new default is now: "phase:2,log,auditlog,pass"

* Improve request body processing error messages.

* Handle lack of a new line after the final boundary in a multipart request.
  This fixes the reported WordPress Flash file uploader problem.

* Fixed issue with multithreaded servers where concurrent XML processing
  could crash the web server (at least under Windows).

* Fixed blocking in phase 3.

* Force modules "mod_rpaf-2.0.c" and "mod_custom_header.c" to run before
  ModSecurity so that the correct IP is used.


07 May 2008 - 2.5.4
-------------------

 * Fixed issue where transformation cache was using the SecDefaultAction
   value even when t:none was used within a rule.


24 Apr 2008 - 2.5.3
-------------------

 * Fixed issue where the exec action may not be able to execute shell scripts.

 * Macros are now expanded in expirevar and deprecatevar.

 * Fixed crash if a persistent variable name was more than 126 characters.

 * Updated included Core Ruleset to version 1.6.1 which fixes some
   false negative issues in the migration to using some 2.5 features.


02 Apr 2008 - 2.5.2
-------------------

 * Allow HTTP_* targets as an alias for REQUEST_HEADERS:*.

 * Make sure temporary filehandles are closed after a transaction.

 * Make sure the apache include directory is included during build.


02 Apr 2008 - 2.1.7
-------------------

 * Make sure temporary filehandles are closed after a transaction.


14 Mar 2008 - 2.5.1
-------------------

 * Fixed an issue where a match would not occur if transformation caching
   was enabled.

 * Using "severity" in a default action is now just a warning.
